--- a/home.html
+++ b/home.html
@@ -6,28 +6,63 @@
       <p style="text-align: center; font-size: 30px; margin-top: 0px;">Create new task</p>
   </button>
 
-  <h2>Assigned Tasks</h2>
-
-  <div class="taskBox">
-    <div class="taskPlank">
-      <img class="taskImage" src="images/task.png" alt="Task">
-      <p style="padding-left: 15px;">Wash the dishes</p>
-      <input type="checkbox" name="isTaskDone" id="isTaskDone">
+  <div class="taskBoxes">
+    <div class="taskContainer">
+      <h2>Assigned tasks</h2>
+      <div class="taskBox">
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Wash the dishes</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Play with a dog</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Make dinner</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Clean the bathroom</p>
+          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Clean the bathroom</p>
+          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
+        </div>
+        <button id="taskBoxbtn" class="clearCompletedTasks">Clear all completed tasks</button>
+      </div>
     </div>
-    <div class="taskPlank">
-      <img class="taskImage" src="images/task.png" alt="Task">
-      <p style="padding-left: 15px;">Play with a dog</p>
-      <input type="checkbox" name="isTaskDone" id="isTaskDone">
-    </div>
-    <div class="taskPlank">
-      <img class="taskImage" src="images/task.png" alt="Task">
-      <p style="padding-left: 15px;">Make dinner</p>
-      <input type="checkbox" name="isTaskDone" id="isTaskDone">
-    </div>
-    <div class="taskPlank">
-      <img class="taskImage" src="images/task.png" alt="Task">
-      <p style="padding-left: 15px;">Clean the bathroom</p>
-      <input type="checkbox"  name="isTaskDone" id="isTaskDone">
+    <div class="doneTaskContainer">
+      <h2>Done tasks</h2>
+      <div class="doneTaskBox">
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Wash the dishes</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Play with a dog</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Make dinner</p>
+          <input type="checkbox" name="isTaskDone" id="isTaskDone">
+        </div>
+        <div class="taskPlank">
+          <img class="taskImage" src="images/task.png" alt="Task">
+          <p style="padding-left: 15px;">Clean the bathroom</p>
+          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
+        </div>
+        <button id="taskBoxbtn" class="clearAll">Clear all</button>
+      </div>
     </div>
   </div>
 </body>
