--- a/home.html
+++ b/home.html
@@ -4,6 +4,9 @@
   <button class="createbutton" id="createTaskBtn">
       <img class="createimage" src="images/plus-button.png" alt="Create task">
       <p style="text-align: center; font-size: 30px; margin-top: 0px;">Create new task</p>
+    <button class="createbutton" id="createTaskBtn">
+        <img class="createimage" src="images/plus-button.png" alt="Create task">
+        <p style="text-align: center; font-size: 30px; margin-top: 0px;">New home member</p>
   </button>
 
   <div class="taskBoxes">
