--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
   
         <button type="submit">Create Home</button>
-        <button type="button" class="closeJoinFormBtn">Cancel</button>
+        <button type="button" class="closeCreateFormBtn">Cancel</button>
       </form>
     </div>
   </div>
