--- a/home.html
+++ b/home.html
@@ -1,70 +1,21 @@
 <body>
-  <h1 class="megaTitle">YOUR HOME homeName</h1>
+  <h1 class="megaTitle">YOUR HOME</h1>
 
   <button class="createbutton" id="createTaskBtn">
       <img class="createimage" src="images/plus-button.png" alt="Create task">
       <p style="text-align: center; font-size: 30px; margin-top: 0px;">Create new task</p>
     <button class="createbutton" id="createTaskBtn">
-        <img class="createimage" src="images/plus-button.png" alt="Create task">
-        <p style="text-align: center; font-size: 30px; margin-top: 0px;">New home member</p>
+        <img class="createimage" src="images/plus-button.png" alt="Create task" style="opacity: 0;">
+        <p style="text-align: center; font-size: 30px; margin-top: 0px; opacity: 0;">New home member</p>
   </button>
 
   <div class="taskBoxes">
     <div class="taskContainer">
       <h2>Assigned tasks</h2>
       <div class="taskBox">
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Wash the dishes</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Play with a dog</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Make dinner</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Clean the bathroom</p>
-          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Clean the bathroom</p>
-          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
-        </div>
-        <button id="taskBoxbtn" class="clearCompletedTasks">Clear all completed tasks</button>
+        <div id="taskBox">
       </div>
-    </div>
-    <div class="doneTaskContainer">
-      <h2>Done tasks</h2>
-      <div class="doneTaskBox">
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Wash the dishes</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Play with a dog</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Make dinner</p>
-          <input type="checkbox" name="isTaskDone" id="isTaskDone">
-        </div>
-        <div class="taskPlank">
-          <img class="taskImage" src="images/task.png" alt="Task">
-          <p style="padding-left: 15px;">Clean the bathroom</p>
-          <input type="checkbox"  name="isTaskDone" id="isTaskDone">
-        </div>
-        <button id="taskBoxbtn" class="clearAll">Clear all</button>
+        <button id="taskBoxbtn" class="clearCompletedTasks">Clear completed tasks</button>
       </div>
     </div>
   </div>
